fix share perms go go-server

--- a/roles/server/tasks/go-server.yml
+++ b/roles/server/tasks/go-server.yml
@@ -71,5 +71,9 @@
   ufw: rule=allow port=8154 proto=tcp
   when: ufw|success
 
+- file: path=/usr/share/go-server state=directory mode=0755 owner={{ GOCD_USER }}
+  sudo: yes
+
 - name: create script for automated Go configuration backups to Git
-  template: backup=no dest=/usr/share/go-server/ mode=0755 src=backup_to_git.sh
+  sudo: yes
+  template: backup=no dest=/usr/share/go-server/ mode=0755 owner={{ GOCD_USER }} src=backup_to_git.sh
