fixing issues with config creation not being under gocd user

--- a/roles/server/tasks/plugins.yml
+++ b/roles/server/tasks/plugins.yml
@@ -2,7 +2,9 @@
 
 - name: Download install GOCD Plugins
   get_url: url="{{ item }}" dest="{{ GOCD_SERVER_PLUGIN }}"
-  sudo_user: "{{ GOCD_USER }}"
+  become: yes
+  become_method: sudo
+  become_user: "{{ GOCD_USER }}"
   with_items: GOCD_PLUGINS_INSTALL
   notify:
    - restart go-server
