--- a/roles/server/tasks/go-server.yml
+++ b/roles/server/tasks/go-server.yml
@@ -71,9 +71,9 @@
   ufw: rule=allow port=8154 proto=tcp
   when: ufw|success
 
-- file: path=/usr/share/go-server state=directory mode=0755 owner={{ GOCD_USER }}
+- file: path=/usr/share/go-server state=directory mode=0755 owner={{ GOCD_USER }} group={{ GOCD_GROUP }}
   sudo: yes
 
 - name: create script for automated Go configuration backups to Git
   sudo: yes
-  template: backup=no dest=/usr/share/go-server/ mode=0755 owner={{ GOCD_USER }} src=backup_to_git.sh
+  template: backup=no dest=/usr/share/go-server/ mode=0755 owner={{ GOCD_USER }} group={{ GOCD_GROUP }} src=backup_to_git.sh
