--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -52,18 +52,30 @@
   user: name={{ GOCD_USER }} comment="Go CD User" uid={{ GOCD_USERID }} group={{ GOCD_GROUP }} home=/var/go
 
 - name: Go's .ssh folder
+  become: yes
+  become_method: sudo
+  become_user: "{{ GOCD_USER }}"
   file: path=/var/go/.ssh state=directory group={{ GOCD_GROUP }} owner={{ GOCD_USER }}
   when: GOCD_CONFIGURE_SSH
 
 - name: SSH public key
-  copy: "dest=/var/go/.ssh/{{ GOCD_SSH_PUBLIC_KEY | basename}} src='{{ GOCD_SSH_PUBLIC_KEY }}' group={{ GOCD_GROUP }} mode=0644 owner={{ GOCD_USER }}"
+  become: yes
+  become_method: sudo
+  become_user: "{{ GOCD_USER }}"
+  copy: "dest=/var/go/.ssh/id_rsa.pub src='{{ GOCD_SSH_PUBLIC_KEY }}' group={{ GOCD_GROUP }} mode=0644 owner={{ GOCD_USER }}"
   when: GOCD_CONFIGURE_SSH
 
 - name: SSH private key
-  copy: "dest=/var/go/.ssh/{{ GOCD_SSH_PRIVATE_KEY | basename}} src='{{ GOCD_SSH_PRIVATE_KEY }}' group={{ GOCD_GROUP }} mode=0600 owner={{ GOCD_USER }}"
+  become: yes
+  become_method: sudo
+  become_user: "{{ GOCD_USER }}"
+  copy: "dest=/var/go/.ssh/id_rsa src='{{ GOCD_SSH_PRIVATE_KEY }}' group={{ GOCD_GROUP }} mode=0600 owner={{ GOCD_USER }}"
   when: GOCD_CONFIGURE_SSH
 
 - name: ensure git server is a known host
+  become: yes
+  become_method: sudo
+  become_user: "{{ GOCD_USER }}"
   lineinfile:
     dest: /var/go/.ssh/known_hosts
     create: yes
