--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -62,14 +62,14 @@
   become: yes
   become_method: sudo
   become_user: "{{ GOCD_USER }}"
-  copy: "dest=/var/go/.ssh/id_rsa.pub src='{{ GOCD_SSH_PUBLIC_KEY }}' group={{ GOCD_GROUP }} mode=0644 owner={{ GOCD_USER }}"
+  copy: "dest=/var/go/.ssh/gocd.key.pub src='{{ GOCD_SSH_PUBLIC_KEY }}' group={{ GOCD_GROUP }} mode=0644 owner={{ GOCD_USER }}"
   when: GOCD_CONFIGURE_SSH
 
 - name: SSH private key
   become: yes
   become_method: sudo
   become_user: "{{ GOCD_USER }}"
-  copy: "dest=/var/go/.ssh/id_rsa src='{{ GOCD_SSH_PRIVATE_KEY }}' group={{ GOCD_GROUP }} mode=0600 owner={{ GOCD_USER }}"
+  copy: "dest=/var/go/.ssh/gocd.key src='{{ GOCD_SSH_PRIVATE_KEY }}' group={{ GOCD_GROUP }} mode=0600 owner={{ GOCD_USER }}"
   when: GOCD_CONFIGURE_SSH
 
 - name: ensure git server is a known host
