--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,23 +3,42 @@
   fail: msg='This role only supports Yum or Apt package managers at the moment.  Please do a manual install instead.'
   when: ansible_pkg_mgr != 'yum' and ansible_pkg_mgr != 'apt'
 
-- name: yum install Java and some basic dependencies
-  sudo: yes
-  yum: name={{ item }} state=present
-  with_items:
-   - unzip
-   - which
-   - java-1.8.0-openjdk-devel
-  when: ansible_pkg_mgr == 'yum'
+#- name: yum install Java and some basic dependencies
+  #sudo: yes
+  #yum: name={{ item }} state=present
+  #with_items:
+   #- unzip
+   #- which
+   #- java-1.8.0-openjdk-devel
+  #when: ansible_pkg_mgr == 'yum'
 
-- name: apt install Java and some basic dependencies. Must be installed before repo.
+- name: apt install basic dependencies. Must be installed before repo.
   sudo: yes
   apt: name={{ item }} state=present update_cache=true
   with_items:
    - python-pycurl
    - unzip
+  when: ansible_pkg_mgr == 'apt'
+
+- name: add ppa for java
+  sudo: yes
+  apt_repository: repo='ppa:openjdk-r/ppa'
+
+- name: apt install java
+  sudo: yes
+  apt: name={{ item }} state=present update_cache=true
+  with_items:
    - openjdk-8-jdk
   when: ansible_pkg_mgr == 'apt'
+
+- name: Force system to use openjdk 8
+  sudo: yes
+  command: "{{ item }}"
+  with_items:
+    - update-alternatives --install "/usr/bin/java" "java" "/usr/lib/jvm/java-8-openjdk-amd64/bin/java" 1
+    - update-alternatives --install "/usr/bin/javac" "javac" "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac" 1
+    - update-alternatives --install "/usr/bin/jar" "jar" "/usr/lib/jvm/java-8-openjdk-amd64/bin/jar" 1
+
 
 - name: determine JAVA_HOME
   shell: readlink -f /usr/bin/java | sed "s:bin/java::"
