--- a/roles/server/defaults/main.yml
+++ b/roles/server/defaults/main.yml
@@ -36,3 +36,4 @@ GOCD_PLUGINS_UNINSTALL:
 
 # GOCD default external dir
 GOCD_SERVER_PLUGIN: /var/lib/go-server/plugins/external
+GOCD_EXISTING_ADMIN: False
