--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -23,6 +23,7 @@
 - name: add ppa for java
   sudo: yes
   apt_repository: repo='ppa:openjdk-r/ppa'
+  when: ansible_pkg_mgr == 'apt' and ansible_os_family == "Ubuntu"
 
 - name: apt install java
   sudo: yes
