--- a/roles/server/tasks/go-server.yml
+++ b/roles/server/tasks/go-server.yml
@@ -1,13 +1,13 @@
 ---
 - name: yum install go-server
-  sudo: yes
+  become: true
   yum: pkg=go-server-{{ GOCD_GO_VERSION }} state=present
   notify:
   - restart go-server
   when: ansible_pkg_mgr=='yum'
 
 - name: apt install go-server
-  sudo: yes
+  become: true
   apt: pkg=go-server={{ GOCD_GO_VERSION }} state=present force=yes
   when: ansible_pkg_mgr=='apt'
 
@@ -16,18 +16,18 @@
 
 - name: replace /etc/default/go-server from package
   template: "src=go-server-defaults dest=/etc/default/go-server mode=0644 group={{ GOCD_GROUP }} owner={{ GOCD_USER }}"
-  sudo: yes
+  become: true
   notify:
   - restart go-server
 
 - name: start go-server
-  sudo: yes
+  become: true
   service: name=go-server state=started
   notify:
      - ensure go-server running
 
 - name: check if firewalld is installed
-  sudo: yes
+  become: true
   command: which firewalld
   ignore_errors: true
   register: firewalld
@@ -35,21 +35,21 @@
 
 - name: check if firewalld service is running
   command: firewall-cmd --state
-  sudo: yes
+  become: true
   when: firewalld|success
   changed_when: false
   register: firewalld_svc
   ignore_errors: true
 
 - name: enable Go HTTP traffic through firewalld
-  sudo: yes
+  become: true
   firewalld: port={{ GOCD_SERVER_PORT }}/tcp permanent=true state=enabled
   when: firewalld|success and firewalld_svc.stdout=='running'
   notify:
     - restart firewalld
 
 - name: enable Go HTTPS traffic through firewalld
-  sudo: yes
+  become: true
   firewalld: port=8154/tcp permanent=true state=enabled
   when: firewalld|success and firewalld_svc.stdout=='running'
   notify:
@@ -62,18 +62,18 @@
   changed_when: false
 
 - name: enable Go HTTP traffic through ufw
-  sudo: yes
+  become: true
   ufw: rule=allow port={{ GOCD_SERVER_PORT }} proto=tcp
   when: ufw|success
 
 - name: enable Go HTTPS traffic through ufw
-  sudo: yes
+  become: true
   ufw: rule=allow port=8154 proto=tcp
   when: ufw|success
 
 - file: path=/usr/share/go-server state=directory mode=0755 owner={{ GOCD_USER }} group={{ GOCD_GROUP }}
-  sudo: yes
+  become: true
 
 - name: create script for automated Go configuration backups to Git
-  sudo: yes
+  become: true
   template: backup=no dest=/usr/share/go-server/ mode=0755 owner={{ GOCD_USER }} group={{ GOCD_GROUP }} src=backup_to_git.sh
